# embedded-template-project

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  release-please-config.json  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  fuzzing-batch.yml  fuzzing-cron.yml  fuzzing-pr.yml  linting-formatting.yml  release-please.yml  security.yml  static-analysis.yml
application/: CMakeLists.txt  Main.cpp
application/bsp/: CMakeLists.txt
application/bsp/EK-TM4C123GXL/: CMakeLists.txt
application/gui/: CMakeLists.txt  MainScreen.cpp  MainScreen.hpp
application/hardware_abstraction/: CMakeLists.txt  Hal.hpp
application/hardware_implementation/: CMakeLists.txt
application/hardware_implementation/EK-TM4C123GXL/: Board.cpp  Board.hpp  CMakeLists.txt
application/hardware_implementation/EK-TM4C1294XL/: Board.cpp  Board.hpp  CMakeLists.txt
application/hardware_implementation/Host/: Board.hpp  CMakeLists.txt
application/parsers/: CMakeLists.txt  Display.cpp  Display.hpp  DriverDrv8711.cpp  DriverDrv8711.hpp  Gui.cpp  Gui.hpp  QuadratureEncoder.cpp  QuadratureEncoder.hpp
application/test/: CMakeLists.txt
application/test/integration/features/: smoke_tests.feature
application/test/micro/: CMakeLists.txt  TestStub.cpp
tools/windows/: jlink_gdb_server.ps1  jlink_gdb_server_ek_tm4c1294xl.ps1
